--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,8 @@
   --yellow-color: #ffff00;
   --elegantRed-color: #d01b1b;
   --red-color: #FF0000;
+  --burgundy-color: #690000;
+  --dark-burgundy-color: #200000 ;
 }
 
 .App {
